# mobile-app-shipping

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP_INSTRUCTIONS.md  app_code.md  app_code.txt  app_design.md  app_roadmap.html  app_roadmap.md  crewai_flow.html  pyproject.toml  requirements.txt  updates.txt
flutter_app/: pubspec.yaml
src/mobile_app_shipping/: main.py
src/mobile_app_shipping/crews/app_design_crew/: app_design_crew.py
src/mobile_app_shipping/crews/app_design_crew/config/: agents.yaml  tasks.yaml
src/mobile_app_shipping/crews/app_development_crew/: app_development_crew.py
src/mobile_app_shipping/crews/app_development_crew/config/: agents.yaml  tasks.yaml
src/mobile_app_shipping/crews/app_idea_crew/: app_idea_crew.py
src/mobile_app_shipping/crews/app_idea_crew/config/: agents.yaml  tasks.yaml
src/mobile_app_shipping/templates/: index.html  loading.html  result.html  select_concept.html
src/mobile_app_shipping/tools/: stable_diffusion_gallery_tool.py  stable_diffusion_tool.py  write_file_tool.py  zip_project_tool.py
