[project]
name = "mobile_app_shipping"
version = "0.1.0"
description = "mobile_app_shipping using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
]

[project.scripts]
kickoff = "mobile_app_shipping.main:kickoff"
run_crew = "mobile_app_shipping.main:kickoff"
plot = "mobile_app_shipping.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]